# hackage-mirror-tool

./: .gitignore  .gitlab-ci.yml  cabal.project  hackage-mirror-tool.cabal  stack.yaml
etc/: run-hackage-mirror-tool.sh
src/: Common.hs  IndexClient.hs  IndexShaSum.hs  Main.hs  SimpleS3.hs
