name:                hackage-mirror-tool
version:             0.0.0.0
synopsis:            Alternative Hackage mirroring tool
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.22
tested-with:         GHC==8.0.1

executable hackage-mirror-tool
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
                       IndexClient
                       IndexShaSum
                       SimpleS3

  build-depends: aeson
               , async
               , base
               , base16-bytestring
               , base64-bytestring
               , blaze-builder
               , bytestring
               , containers
               , cryptohash-md5
               , cryptohash-sha1
               , cryptohash-sha256
               , deepseq
               , directory
               , filepath
               , hackage-security
               , hackage-security-HTTP
               , hashable
               , http-streams
               , io-streams
               , network-uri
               , optparse-applicative
               , tar
               , text
               , time
               , unix
               , unordered-containers
               , xml
               , zlib

  ghc-options:         -threaded -Wall -rtsopts
